--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,8 @@
 {
   "name": "coord-client",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "private": true,
+  "proxy": "http://localhost:3001/",
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
