--- a/package.json
+++ b/package.json
@@ -22,5 +22,14 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0"
+  },
+  "eslintConfig": {
+    "extends": "airbnb",
+    "env": {
+      "node": true
+    },
+    "rules": {
+      "comma-dangle": ["error", "never"]
+    }
   }
 }
