--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-react": "^7.4.0",
     "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.5",
+    "font-awesome": "^4.7.0",
     "fs-extra": "^4.0.2",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.2.1",
@@ -92,7 +93,10 @@
     },
     "rules": {
       "react/prefer-stateless-function": 0,
-      "comma-dangle": ["error", "never"]
+      "comma-dangle": [
+        "error",
+        "never"
+      ]
     }
   }
 }
