--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "postcss-flexbugs-fixes": "^3.2.0",
     "postcss-loader": "^2.0.8",
     "promise": "^8.0.1",
+    "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dev-utils": "^4.1.0",
     "react-dom": "^16.0.0",
@@ -93,6 +94,7 @@
     },
     "rules": {
       "react/prefer-stateless-function": 0,
+      "jsx-a11y/click-events-have-key-events": 0,
       "comma-dangle": [
         "error",
         "never"
