--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "babel-core": "^6.26.0",
-    "express": "^4.16.2",
     "body-parser": "^1.18.2",
     "debug": "^3.1.0",
+    "express": "^4.16.2",
+    "googleapis": "^22.2.0",
     "morgan": "^1.9.0"
   },
   "devDependencies": {
@@ -29,7 +30,10 @@
       "node": true
     },
     "rules": {
-      "comma-dangle": ["error", "never"]
+      "comma-dangle": [
+        "error",
+        "never"
+      ]
     }
   }
 }
