--- a/server/package.json
+++ b/server/package.json
@@ -2,22 +2,17 @@
   "name": "coord",
   "version": "0.0.1",
   "private": true,
-  "scripts": {
-    "start": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "node server.js",
-    "client": "node start-client.js",
-    "lint": "eslint ."
-  },
   "dependencies": {
     "babel-core": "^6.26.0",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "debug": "^3.1.0",
     "express": "^4.16.2",
     "googleapis": "^22.2.0",
+    "lodash": "^4.17.4",
     "morgan": "^1.9.0"
   },
   "devDependencies": {
-    "concurrently": "^3.5.0",
     "eslint": "^4.9.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.7.0"
@@ -31,7 +26,10 @@
       "comma-dangle": [
         "error",
         "never"
-      ]
+      ],
+      "no-param-reassign": [2, { 
+        "props": false
+    }]
     }
   }
 }
