--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
     "express": "^4.16.2",
     "googleapis": "^22.2.0",
     "lodash": "^4.17.4",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "pg": "^7.3.0",
+    "pg-promise": "^7.2.0"
   },
   "devDependencies": {
     "eslint": "^4.9.0",
@@ -27,9 +29,12 @@
         "error",
         "never"
       ],
-      "no-param-reassign": [2, { 
-        "props": false
-    }]
+      "no-param-reassign": [
+        2,
+        {
+          "props": false
+        }
+      ]
     }
   }
 }
