--- a/server/package.json
+++ b/server/package.json
@@ -9,10 +9,11 @@
     "debug": "^3.1.0",
     "express": "^4.16.2",
     "googleapis": "^22.2.0",
+    "knex": "^0.13.0",
     "lodash": "^4.17.4",
     "morgan": "^1.9.0",
-    "pg": "^7.3.0",
-    "pg-promise": "^7.2.0"
+    "objection": "^0.9.0",
+    "pg": "^7.3.0"
   },
   "devDependencies": {
     "eslint": "^4.9.0",
