--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "react-router-redux": "^4.0.8",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "seamless-immutable": "^7.1.2",
     "style-loader": "^0.19.0",
     "sw-precache-webpack-plugin": "^0.11.4",
     "url-loader": "^0.6.2",
