--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     }
   },
   "dependencies": {
+    "animated": "^0.2.1",
     "autoprefixer": "^7.1.5",
     "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
