--- a/client/package.json
+++ b/client/package.json
@@ -48,6 +48,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
+    "react-youtube": "^7.5.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "seamless-immutable": "^7.1.2",
